fix homepage horiz scrolling on mobile (again)

--- a/src/components/hero.scss
+++ b/src/components/hero.scss
@@ -6,6 +6,7 @@
   }
 
   .row {
+    --bs-gutter-x: 0;
     display: flex;
     align-items: center;
   }
@@ -75,6 +76,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  padding: 0 5px;
 
   img {
     mask-position: center center;
